# financial_reports

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
application_tests/: Cargo.toml
application_tests/src/: lib.rs
applications/: Cargo.toml
applications/src/: company.rs  favorite.rs  lib.rs  portfolio.rs  session.rs  stock.rs  user.rs  users.rs
applications/src/company/: company_data.rs  company_query_command.rs  company_query_error.rs  company_query_parameters.rs  company_query_service.rs  inmemory_company_query_service_impl.rs
applications/src/favorite/: favorite_application_error.rs  favorite_data.rs  favorite_service.rs  favorite_service_impl.rs  inmemory_favorite_repository_impl.rs
applications/src/portfolio/: inmemory_portfolio_repository_impl.rs  portfolio_application_error.rs  portfolio_data.rs  portfolio_service.rs  portfolio_service_impl.rs  portfolio_update_command.rs
applications/src/session/: inmemory_session_repository.rs  session_data.rs
applications/src/stock/: companies.rs  company_query_parameters.rs  company_query_service.rs  inmemory_company_query_service_impl.rs  inmemory_stock_query_service_impl.rs  stock_data.rs  stock_query_command.rs  stock_query_error.rs  stock_query_parameters.rs  stock_query_service.rs
applications/src/user/: inmemory_user_repository_impl.rs  user_application_error.rs  user_application_service.rs  user_data.rs  user_service_impl.rs
applications/src/users/: command.rs  common.rs  delete.rs  get.rs  inmemory_user_repository.rs  inmemory_user_repository_impl.rs  user_application_error.rs  user_application_service.rs  user_application_service_impl.rs  user_data.rs  user_service_impl.rs
applications/src/users/command/: delete_command.rs  get_command.rs  update_command.rs
applications/src/users/common/: session_repository.rs  user_data.rs
applications/src/users/create/: create_command.rs
applications/src/users/delete/: delete_command.rs
applications/src/users/get/: get_command.rs
domain/: Cargo.toml
domain/src/: favorite.rs  lib.rs  portfolio.rs  stock.rs  users.rs
domain/src/favorite/: favorite_domain_error.rs  favorite_model.rs  favorite_repository.rs
domain/src/portfolio/: portfolio_domain_error.rs  portfolio_model.rs  portfolio_repository.rs
domain/src/stock/: companies.rs  stock_data.rs  stock_id.rs
domain/src/user/: user_domain_error.rs  user_domain_service.rs  user_email.rs  user_id.rs  user_model.rs  user_repository.rs
domain/src/users/: user_domain_error.rs  user_domain_service.rs  user_email.rs  user_id.rs  user_model.rs  user_name.rs  user_repository.rs  user_service.rs
infrastructures/: Cargo.toml
infrastructures/src/: auth.rs  common.rs  company.rs  favorite.rs  lib.rs  portfolio.rs  session.rs  stock.rs  user.rs  users.rs
infrastructures/src/auth/: oicd_client.rs  oicd_data.rs  oicd_service_impl.rs
infrastructures/src/common/: state.rs  state_impl.rs  utility_impl.rs
infrastructures/src/company/: postgres_company_query_service.rs
infrastructures/src/favorite/: postgres_favorite_repository.rs
infrastructures/src/portfolio/: postgres_portfolio_repository.rs
infrastructures/src/session/: inmemory_session_repository.rs  redis_session_repository.rs  session_data_impl.rs  session_repository_impl.rs  session_service_impl.rs
infrastructures/src/stock/: postgres_stock_query_service.rs
infrastructures/src/user/: postgres_user_repository.rs
infrastructures/src/users/: inmemory_user_repository.rs
migrations/: 20220530145100_init.sql  20220610091533_create_companies.sql  20220610113809_init.down.sql  20220610113809_init.up.sql
presentation/: Cargo.toml
presentation/src/: auth.rs  common.rs  company.rs  controllers.rs  lib.rs  root_controllers.rs  session.rs  stock.rs  user.rs
presentation/src/auth/: auth_controller.rs  infrastructures.rs  oicd_client.rs  oicd_data.rs  oicd_error.rs  oicd_service.rs  oicd_service_impl.rs  session_data.rs  session_repository.rs
presentation/src/auth/infrastructures/: oicd_service_impl.rs
presentation/src/common/: api_controllers.rs  api_error.rs  api_response.rs  app_state.rs  app_state_impl.rs  common_response.rs  json_builder.rs  response.rs  state.rs  utility.rs  utility_impl.rs
presentation/src/company/: company_controller.rs  company_response.rs
presentation/src/session/: infrastructures.rs  inmemory_session_repository.rs  item_key.rs  session_data.rs  session_error.rs  session_id.rs  session_item.rs  session_item_key.rs  session_key.rs  session_manage_layer.rs  session_repository.rs  session_repository_impl.rs  session_service.rs  user_id_from_request.rs
presentation/src/session/infrastructures/: session_service_impl.rs
presentation/src/stock/: stock_controller.rs  stock_response.rs
presentation/src/user/: favorite_response.rs  login_user_id.rs  logined_user_id.rs  portfolio_response.rs  user_controller.rs  user_response.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs  main.rs
src/: api.rs  lib.rs  main.rs  session.rs  state_impl.rs
src/api/: auth.rs  database.rs
src/api/auth/: forms.rs  models.rs  routes.rs
src/api/reports/: routes.rs
src/api/users/: routes.rs
src/session/: database.rs  request.rs
xbrl_parser/: Cargo.toml
xbrl_parser/src/: main.rs  node.rs  parser.rs
