[package]
name = "financial_report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.6", features = ["headers"] }
tokio = { version = "1.18.2", features = ["full"] }
dotenvy = "0.15.1"
anyhow = "1.0.57"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres"] }
async-session = "3.0.0"
async-redis-session = "0.2.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
validator = { version = "0.15.0", features = ["derive"] }

[workspace]
members = ["domain", "applications", "presentation", "infrastructures"]
