[package]
name = "financial_report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "domain" }
applications = { path = "applications" }
presentation = { path = "presentation" }
infrastructures = { path = "infrastructures" }
axum = { version = "0.5.6", features = ["headers"] }
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
tokio = { version = "1.18.2", features = ["full"] }
dotenvy = "0.15.1"
anyhow = "1.0.57"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tower-http = { version = "0.3.4", features = ["trace"] }
async-session = "3.0.0"
async-redis-session = "0.2.2"

[workspace]
members = ["domain", "applications", "presentation", "infrastructures"]
