[package]
name = "financial_report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "domain" }
applications = { path = "applications" }
presentation = { path = "presentation" }
infrastructures = { path = "infrastructures" }
axum = { version = "0.6.1", features = ["headers"] }
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
tokio = { version = "1.23.0", features = ["full"] }
dotenvy = "0.15.6"
anyhow = "1.0.68"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.3.5", features = ["trace"] }
async-session = "3.0.0"
async-redis-session = "0.2.2"

[workspace]
members = ["domain", "applications", "presentation", "infrastructures"]
