[package]
name = "applications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
anyhow = "1.0.58"
async-session = "3.0.0"
async-trait = "0.1.56"
serde = { version = "1.0.137", features = ["derive"] }
chrono = "0.4.23"
futures = "0.3.25"

[dev-dependencies]
tokio = { version = "1.18.2", features = ["full"] }
