[package]
name = "applications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
anyhow = "1.0.68"
async-session = "3.0.0"
async-trait = "0.1.60"
serde = { version = "1.0.151", features = ["derive"] }
chrono = "0.4.23"
futures = "0.3.25"
thiserror = "1.0.38"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }
