[package]
name = "infrastructures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
applications = { path = "../applications" }
domain = { path = "../domain" }
presentation = { path = "../presentation" }
anyhow = "1.0.58"
async-session = "3.0.0"
async-redis-session = "0.2.2"
async-trait = "0.1.56"
openidconnect = "2.3.2"
serde = { version = "1.0.137", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
base64 = "0.13.0"
