[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
applications = { path = "../applications" }
anyhow = "1.0.58"
async-session = "3.0.0"
tokio = { version = "1.18.2", features = ["full"] }
async-trait = "0.1.56"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.83"
axum = { version = "0.5.13", features = ["headers"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[dev-dependencies]
base64 = "0.13.0"
