[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
applications = { path = "../applications" }
anyhow = "1.0.68"
async-session = "3.0.0"
tokio = { version = "1.23.0", features = ["full"] }
async-trait = "0.1.60"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
axum = { version = "0.6.1", features = ["headers"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = { version = "0.4.23", features = ["std"] }
openidconnect = "2.4.0"
thiserror = "1.0.38"
futures = "0.3.25"

[dev-dependencies]
base64 = "0.20.0"
