[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
anyhow = "1.0.57"
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0.81"
